# WgcCapture

./: .gitignore  CMakeLists.txt  README.md  build.ps1  release.ps1
docs/: API.md  易语言声明.md
examples/: capture_gw2.cpp  capture_test_common.h  example.cpp  session_example.cpp  test_desktop_dup.cpp  test_printwindow.cpp
include/: GraphicsCapture.h
src/: CaptureSession.cpp  CaptureSession.h  GraphicsCapture.cpp  WindowCapture.cpp  WindowCapture.h  WindowCaptureDesktopDup.cpp  WindowCapturePrintWindow.cpp  WindowCaptureWgc.cpp
